--- a/index.html
+++ b/index.html
@@ -1,110 +1,169 @@
-<?php
-// attendance.php
-
-// Check if the attendance data is being submitted
-if ($_SERVER['REQUEST_METHOD'] === 'POST') {
-    $name = $_POST['name'];
-    $timestamp = date("Y-m-d H:i:s");
-
-    // Save attendance data to a CSV file
-    $file = fopen("attendance.csv", "a");
-    fputcsv($file, [$name, $timestamp]);
-    fclose($file);
-
-    echo json_encode(["status" => "success", "message" => "Attendance recorded for $name."]);
-    exit;
-}
-?>
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facial Recognition Attendance</title>
-    <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
-        video {
-            width: 640px;
-            height: 480px;
-            border: 2px solid #ccc;
-        }
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>QR Code Scanner & Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
+  <script src="https://unpkg.com/html5-qrcode" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js" defer></script>
+  <style>
+    /* Override Tailwind container max-width for full width on small */
+    #qr-reader {
+      width: 100%;
+      border-radius: 0.5rem;
+      overflow: hidden;
+    }
+
+    /* Ensure the layout is optimized for portrait mode */
+    @media only screen and (orientation: portrait) {
+      body {
+        flex-direction: column;
+      }
+      main {
+        padding: 2rem 1rem; /* Adjust padding for better spacing */
+      }
+    }
+  </style>
 </head>
-<body>
-    <h1>Facial Recognition Attendance</h1>
-    <video id="video" autoplay muted></video>
-    <button id="capture">Capture Attendance</button>
-    <div id="message"></div>
+<body class="flex flex-col min-h-screen bg-white font-sans">
+  <!-- Header with PSA logo and title -->
+  <header class="bg-gray-300 flex flex-col items-center py-6">
+    <img
+      src="icon.png"
+      alt="Philippine Statistics Authority logo with globe and arrows in blue, yellow, and red"
+      class="h-24 w-auto mb-6"
+      width="150"
+      height="150"
+    />
+    <h1 class="text-black font-extrabold text-3xl">QR SCANNER</h1>
+  </header>
 
-    <script>
-        const video = document.getElementById('video');
-        const messageDiv = document.getElementById('message');
-        const captureButton = document.getElementById('capture');
+  <!-- Main app container -->
+  <main class="flex-grow container mx-auto px-4 py-8 max-w-5xl">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <!-- Scanner Card -->
+      <section
+        class="bg-white rounded-2xl p-6 shadow-md flex flex-col items-center text-center"
+      >
+        <h3 class="text-lg font-semibold mb-4">🎥</h3>
+        <button
+          id="start-scanner-btn"
+          class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded w-full mb-4"
+          type="button"
+        >
+          Start Camera
+        </button>
+        <div id="qr-reader" class="hidden w-full rounded-md border border-gray-300"></div>
+        <a id="qr-result" class="text-green-600 font-bold mt-4 min-h-[1.5rem] hidden" target="_blank"></a> <!-- Clickable result -->
+        <button
+          id="copy-btn"
+          class="hidden bg-cyan-500 hover:bg-cyan-600 text-white font-semibold py-1 px-3 rounded w-full mt-4"
+          type="button"
+        >
+          📋 Copy Result
+        </button>
+      </section>
 
-        // Load face-api.js models
-        Promise.all([
-            faceapi.nets.tinyFaceDetector.loadFromUri('/models'),
-            faceapi.nets.faceLandmark68Net.loadFromUri('/models'),
-            faceapi.nets.faceRecognitionNet.loadFromUri('/models')
-        ]).then(startVideo);
+      <!-- Generator Card -->
+      <section
+        class="bg-white rounded-2xl p-6 shadow-md flex flex-col items-center text-center"
+      >
+        <h3 class="text-lg font-semibold mb-4">🔧 QR Code Generator</h3>
+        <form id="qr-form" class="w-full">
+          <input
+            type="text"
+            id="text"
+            placeholder="Enter text or URL"
+            class="border border-gray-300 rounded-md p-2 w-full mb-4"
+            required
+          />
+          <button
+            type="submit"
+            class="bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded w-full"
+          >
+            Generate QR Code
+          </button>
+        </form>
+        <div id="qr-code" class="mt-4"></div>
+        <a id="download-link" class="hidden" download="qrcode.png">Download QR Code</a>
+      </section>
+    </div>
+  </main>
 
-        function startVideo() {
-            navigator.mediaDevices.getUser Media({ video: {} })
-                .then(stream => {
-                    video.srcObject = stream;
-                });
-        }
+  <!-- Footer -->
+  <footer class="bg-gray-300 py-6 text-center font-extrabold text-xl">
+    MADE BY :<br />
+    CRISTOFER AMORES
+  </footer>
 
-        captureButton.addEventListener('click', async () => {
-            const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions()).withFaceLandmarks().withFaceDescriptors();
-            if (detections.length > 0) {
-                const faceDescriptor = detections[0].descriptor;
-                // Here you would compare the faceDescriptor with known faces
-                // For simplicity, we will assume a known user "John Doe"
-                const knownFaceDescriptor = [/* Add known face descriptor here */];
+  <script>
+    window.addEventListener("DOMContentLoaded", () => {
+      const $ = (id) => document.getElementById(id),
+        result = $("qr-result"),
+        link = $("download-link"),
+        copyBtn = $("copy-btn"),
+        qrReader = $("qr-reader"),
+        startBtn = $("start-scanner-btn");
+      let reader;
 
-                // Compare and recognize
-                const distance = faceapi.euclideanDistance(faceDescriptor, knownFaceDescriptor);
-                if (distance < 0.6) { // Threshold for recognition
-                    const name = "John Doe"; // Recognized name
-                    recordAttendance(name);
-                } else {
-                    messageDiv.innerText = "Face not recognized.";
-                }
-            } else {
-                messageDiv.innerText = "No face detected.";
-            }
-        });
-
-        function recordAttendance(name) {
-            fetch('attendance.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: `name=${name}`
-            })
-            .then(response => response.json())
-            .then(data => {
-                messageDiv.innerText = data.message;
+      // Start Scanner
+      window.startScanner = () => {
+        qrReader.classList.remove("hidden");
+        if (!reader) reader = new Html5Qrcode("qr-reader");
+        reader.start(
+          { facingMode: "environment" },
+          { fps: 10, qrbox: 250 },
+          (txt) => {
+            // Set the scanned result as the link and make it visible
+            result.textContent = txt; // Set the link text
+            result.href = txt; // Set the href attribute to the scanned result
+            result.classList.remove("hidden"); // Show the link
+            
+            // Stop the QR code reader
+            reader.stop().then(() => {
+              qrReader.classList.add("hidden"); // Hide the QR reader
+            }).catch((err) => {
+              console.error("Failed to stop the QR reader:", err);
             });
-        }
-    </script>
+          },
+          () => {}
+        );
+      };
+
+      startBtn.addEventListener("click", () => {
+        window.startScanner();
+      });
+
+      // Copy result
+      window.copyResult = () =>
+        navigator.clipboard.writeText(result.textContent).then(() => alert("Copied!"));
+
+      copyBtn.addEventListener("click", () => {
+        window.copyResult();
+      });
+
+      // Generate QR
+      $("qr-form").addEventListener("submit", (e) => {
+        e.preventDefault();
+        const text = $("text").value.trim();
+        $("qr-code").innerHTML = "";
+        if (!text) return;
+        QRCode.toCanvas(text, { width: 200 }, (err, canvas) => {
+          if (err) return;
+          $("qr-code").appendChild(canvas);
+          link.href = canvas.toDataURL("image/png");
+          link.classList.remove("hidden");
+        });
+      });
+    });
+  </script>
 </body>
 </html>
+
